// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./packages/react/src/CSSTransition/__doc__/Advance.tsx correctly 1`] = `
<div>
  <button>
    Click
  </button>
</div>
`;

exports[`renders ./packages/react/src/CSSTransition/__doc__/Basic.tsx correctly 1`] = `
<div>
  <button>
    Click
  </button>
</div>
`;

exports[`renders ./packages/react/src/CollapseTransition/__doc__/Basic.tsx correctly 1`] = `
<div
  class="wrapper"
>
  <button>
    Click
  </button>
</div>
`;

exports[`renders ./packages/react/src/CollapseTransition/__doc__/Horizontal.tsx correctly 1`] = `
<div
  class="wrapper"
>
  <button>
    Click
  </button>
</div>
`;

exports[`renders ./packages/react/src/Icon/__doc__/Basic.tsx correctly 1`] = `
.c0 {
  position: relative;
  box-sizing: border-box;
  zoom: 1;
}

.c0:before,
.c0:after {
  display: table;
  box-sizing: border-box;
  content: " ";
}

.c0:after {
  clear: both;
}

.c1 {
  float: left;
  box-sizing: border-box;
  position: relative;
  min-height: 1px;
  width: 33.333333333333336%;
}

.c2 {
  float: left;
  box-sizing: border-box;
  position: relative;
  min-height: 1px;
  width: 66.66666666666667%;
}

.c3 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentcolor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 300ms 0ms cubic-bezier(0.4,0,0.2,1);
  transition: fill 300ms 0ms cubic-bezier(0.4,0,0.2,1);
}

<div>
  <div
    class="c0 xl-row-root"
  >
    <div
      class="c1 xl-col-root xl-col-root-column-8"
    >
      Filled
    </div>
    <div
      class="c2 xl-col-root xl-col-root-column-16"
    >
      <svg
        class="c3 xl-icon-root"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
        />
      </svg>
      <svg
        class="c3 xl-icon-root"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
        />
      </svg>
    </div>
  </div>
  <div
    class="c0 xl-row-root"
  >
    <div
      class="c1 xl-col-root xl-col-root-column-8"
    >
      Outlined
    </div>
    <div
      class="c2 xl-col-root xl-col-root-column-16"
    >
      <svg
        class="c3 xl-icon-root"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M16 9v10H8V9h8m-1.5-6h-5l-1 1H5v2h14V4h-3.5l-1-1zM18 7H6v12c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7z"
        />
      </svg>
      <svg
        class="c3 xl-icon-root"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M14.12 10.47L12 12.59l-2.13-2.12-1.41 1.41L10.59 14l-2.12 2.12 1.41 1.41L12 15.41l2.12 2.12 1.41-1.41L13.41 14l2.12-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4zM6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM8 9h8v10H8V9z"
        />
      </svg>
    </div>
  </div>
  <div
    class="c0 xl-row-root"
  >
    <div
      class="c1 xl-col-root xl-col-root-column-8"
    >
      Rounded
    </div>
    <div
      class="c2 xl-col-root xl-col-root-column-16"
    >
      <svg
        class="c3 xl-icon-root"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V9c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v10zM18 4h-2.5l-.71-.71c-.18-.18-.44-.29-.7-.29H9.91c-.26 0-.52.11-.7.29L8.5 4H6c-.55 0-1 .45-1 1s.45 1 1 1h12c.55 0 1-.45 1-1s-.45-1-1-1z"
        />
      </svg>
      <svg
        class="c3 xl-icon-root"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V9c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v10zm3.17-7.83c.39-.39 1.02-.39 1.41 0L12 12.59l1.42-1.42c.39-.39 1.02-.39 1.41 0 .39.39.39 1.02 0 1.41L13.41 14l1.42 1.42c.39.39.39 1.02 0 1.41-.39.39-1.02.39-1.41 0L12 15.41l-1.42 1.42c-.39.39-1.02.39-1.41 0a.9959.9959 0 010-1.41L10.59 14l-1.42-1.42c-.39-.38-.39-1.02 0-1.41zM15.5 4l-.71-.71c-.18-.18-.44-.29-.7-.29H9.91c-.26 0-.52.11-.7.29L8.5 4H6c-.55 0-1 .45-1 1s.45 1 1 1h12c.55 0 1-.45 1-1s-.45-1-1-1h-2.5z"
        />
      </svg>
    </div>
  </div>
  <div
    class="c0 xl-row-root"
  >
    <div
      class="c1 xl-col-root xl-col-root-column-8"
    >
      Two Tone
    </div>
    <div
      class="c2 xl-col-root xl-col-root-column-16"
    >
      <svg
        class="c3 xl-icon-root"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M8 9h8v10H8z"
          opacity=".3"
        />
        <path
          d="M15.5 4l-1-1h-5l-1 1H5v2h14V4zM6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM8 9h8v10H8V9z"
        />
      </svg>
      <svg
        class="c3 xl-icon-root"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M16 9H8v10h8V9zm-.47 7.12l-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12 1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12z"
          opacity=".3"
        />
        <path
          d="M14.12 10.47L12 12.59l-2.13-2.12-1.41 1.41L10.59 14l-2.12 2.12 1.41 1.41L12 15.41l2.12 2.12 1.41-1.41L13.41 14l2.12-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4zM6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM8 9h8v10H8V9z"
        />
      </svg>
    </div>
  </div>
  <div
    class="c0 xl-row-root"
  >
    <div
      class="c1 xl-col-root xl-col-root-column-8"
    >
      Sharp
    </div>
    <div
      class="c2 xl-col-root xl-col-root-column-16"
    >
      <svg
        class="c3 xl-icon-root"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M6 21h12V7H6v14zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
        />
      </svg>
      <svg
        class="c3 xl-icon-root"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M6 21h12V7H6v14zm2.46-9.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4h-3.5z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`renders ./packages/react/src/Ripple/__doc__/Advance.tsx correctly 1`] = `
.c1 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 0;
  overflow: hidden;
  border-radius: inherit;
  pointer-events: none;
}

.c0 {
  position: relative;
  height: 100px;
  background-color: rgba(0,0,0,0.12);
  color: #3f51b5;
  font-size: 26px;
  text-align: center;
  line-height: 100px;
}

.c0 .xl-ripple {
  opacity: 0.5;
}

.c0 .ripple-enter-active,
.c0 .ripple-leave-active {
  -webkit-transition: all 0.4s ease;
  transition: all 0.4s ease;
}

.c0 .ripple-enter,
.c0 .ripple-leave-to {
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  opacity: 0.1;
}

.c0 .ripple-enter-to,
.c0 .ripple-leave {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

<div
  class="c0"
>
  click me
  <div
    class="c1 xl-ripple-root"
  />
</div>
`;

exports[`renders ./packages/react/src/Ripple/__doc__/Basic.tsx correctly 1`] = `
.c1 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 0;
  overflow: hidden;
  border-radius: inherit;
  pointer-events: none;
}

.c0 {
  position: relative;
  height: 100px;
  background-color: rgba(0,0,0,0.12);
  color: #3f51b5;
  font-size: 26px;
  text-align: center;
  line-height: 100px;
}

.c0 .xl-ripple {
  opacity: 0.5;
}

.c0 .ripple-enter-active,
.c0 .ripple-leave-active {
  -webkit-transition: all 0.4s ease;
  transition: all 0.4s ease;
}

.c0 .ripple-enter,
.c0 .ripple-leave-to {
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  opacity: 0.1;
}

.c0 .ripple-enter-to,
.c0 .ripple-leave {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

<div
  class="c0"
>
  click me
  <div
    class="c1 xl-ripple-root"
  />
</div>
`;

exports[`renders ./packages/react/src/Row/__doc__/Basic.tsx correctly 1`] = `
.c2 {
  position: relative;
  box-sizing: border-box;
  zoom: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2:before,
.c2:after {
  display: table;
  box-sizing: border-box;
  content: " ";
}

.c2:after {
  clear: both;
}

.c2::after {
  display: none;
}

.c8 {
  position: relative;
  box-sizing: border-box;
  zoom: 1;
}

.c8:before,
.c8:after {
  display: table;
  box-sizing: border-box;
  content: " ";
}

.c8:after {
  clear: both;
}

.c3 {
  float: left;
  box-sizing: border-box;
  position: relative;
  min-height: 1px;
  width: 16.666666666666668%;
}

.c5 {
  float: left;
  box-sizing: border-box;
  position: relative;
  min-height: 1px;
  width: 20.833333333333332%;
}

.c6 {
  float: left;
  box-sizing: border-box;
  position: relative;
  min-height: 1px;
  width: 29.166666666666668%;
}

.c7 {
  float: left;
  box-sizing: border-box;
  position: relative;
  min-height: 1px;
  width: 33.333333333333336%;
}

.c9 {
  float: left;
  box-sizing: border-box;
  position: relative;
  min-height: 1px;
  width: 25%;
}

.c10 {
  float: left;
  box-sizing: border-box;
  display: none;
  position: relative;
  min-height: 1px;
  width: 0%;
}

.c1 {
  padding: 0.5rem;
  background-color: rgba(0,0,0,0.12);
  border-radius: 4px;
}

.c0 + .c0 {
  margin-top: 1rem;
}

.c4 {
  padding: 0.5rem;
  color: #fff;
  text-align: center;
  background-color: #3f51b5;
  border-radius: 5px;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2 xl-row-root xl-row-root-flex"
      style="margin-left: -5px; margin-right: -5px;"
    >
      <div
        class="c3 xl-col-root xl-col-root-column-4"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col1
        </div>
      </div>
      <div
        class="c5 xl-col-root xl-col-root-column-5"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col2
        </div>
      </div>
      <div
        class="c6 xl-col-root xl-col-root-column-7"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col3
        </div>
      </div>
      <div
        class="c7 xl-col-root xl-col-root-column-8"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col4
        </div>
      </div>
    </div>
  </div>
  <div
    class="c0 c1"
  >
    <div
      class="c8 xl-row-root"
      style="margin-left: -5px; margin-right: -5px;"
    >
      <div
        class="c9 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col1
        </div>
      </div>
      <div
        class="c9 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col2
        </div>
      </div>
      <div
        class="c9 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col3
        </div>
      </div>
      <div
        class="c9 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col4
        </div>
      </div>
    </div>
  </div>
  <div
    class="c0 c1"
  >
    <div
      class="c8 xl-row-root"
      style="margin-left: -5px; margin-right: -5px;"
    >
      <div
        class="c7 xl-col-root xl-col-root-column-8"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col1
        </div>
      </div>
      <div
        class="c10 xl-col-root"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col2
        </div>
      </div>
      <div
        class="c7 xl-col-root xl-col-root-column-8"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col3
        </div>
      </div>
      <div
        class="c7 xl-col-root xl-col-root-column-8"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col4
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./packages/react/src/Row/__doc__/Flex.tsx correctly 1`] = `
.c2 {
  position: relative;
  box-sizing: border-box;
  zoom: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c2:before,
.c2:after {
  display: table;
  box-sizing: border-box;
  content: " ";
}

.c2:after {
  clear: both;
}

.c2::after {
  display: none;
}

.c5 {
  position: relative;
  box-sizing: border-box;
  zoom: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5:before,
.c5:after {
  display: table;
  box-sizing: border-box;
  content: " ";
}

.c5:after {
  clear: both;
}

.c5::after {
  display: none;
}

.c6 {
  position: relative;
  box-sizing: border-box;
  zoom: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c6:before,
.c6:after {
  display: table;
  box-sizing: border-box;
  content: " ";
}

.c6:after {
  clear: both;
}

.c6::after {
  display: none;
}

.c7 {
  position: relative;
  box-sizing: border-box;
  zoom: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c7:before,
.c7:after {
  display: table;
  box-sizing: border-box;
  content: " ";
}

.c7:after {
  clear: both;
}

.c7::after {
  display: none;
}

.c8 {
  position: relative;
  box-sizing: border-box;
  zoom: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8:before,
.c8:after {
  display: table;
  box-sizing: border-box;
  content: " ";
}

.c8:after {
  clear: both;
}

.c8::after {
  display: none;
}

.c9 {
  position: relative;
  box-sizing: border-box;
  zoom: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c9:before,
.c9:after {
  display: table;
  box-sizing: border-box;
  content: " ";
}

.c9:after {
  clear: both;
}

.c9::after {
  display: none;
}

.c3 {
  float: left;
  box-sizing: border-box;
  position: relative;
  min-height: 1px;
  width: 25%;
}

.c1 {
  padding: 0.5rem;
  background-color: rgba(0,0,0,0.12);
  border-radius: 4px;
}

.c0 + .c0 {
  margin-top: 1rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.5rem;
  color: #fff;
  -webkit-align-item: center;
  -webkit-box-align-item: center;
  -ms-flex-align-item: center;
  align-item: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #3f51b5;
  border-radius: 5px;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2 xl-row-root xl-row-root-flex xl-row-root-align-top"
      style="margin-left: -5px; margin-right: -5px;"
    >
      <div
        class="c3 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
          style="height: 100px;"
        >
          col1
        </div>
      </div>
      <div
        class="c3 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
          style="height: 50px;"
        >
          col2
        </div>
      </div>
      <div
        class="c3 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
          style="height: 120px;"
        >
          col3
        </div>
      </div>
      <div
        class="c3 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
          style="height: 60px;"
        >
          col4
        </div>
      </div>
    </div>
  </div>
  <div
    class="c0 c1"
  >
    <div
      class="c5 xl-row-root xl-row-root-flex xl-row-root-align-middle"
      style="margin-left: -5px; margin-right: -5px;"
    >
      <div
        class="c3 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
          style="height: 100px;"
        >
          col1
        </div>
      </div>
      <div
        class="c3 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
          style="height: 50px;"
        >
          col2
        </div>
      </div>
      <div
        class="c3 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
          style="height: 120px;"
        >
          col3
        </div>
      </div>
      <div
        class="c3 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
          style="height: 60px;"
        >
          col4
        </div>
      </div>
    </div>
  </div>
  <div
    class="c0 c1"
  >
    <div
      class="c6 xl-row-root xl-row-root-flex xl-row-root-align-bottom"
      style="margin-left: -5px; margin-right: -5px;"
    >
      <div
        class="c3 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
          style="height: 100px;"
        >
          col1
        </div>
      </div>
      <div
        class="c3 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
          style="height: 50px;"
        >
          col2
        </div>
      </div>
      <div
        class="c3 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
          style="height: 120px;"
        >
          col3
        </div>
      </div>
      <div
        class="c3 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
          style="height: 60px;"
        >
          col4
        </div>
      </div>
    </div>
  </div>
  <div
    class="c0 c1"
  >
    <div
      class="c7 xl-row-root xl-row-root-flex xl-row-root-justify-start"
      style="margin-left: -5px; margin-right: -5px;"
    >
      <div
        class="c3 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col1
        </div>
      </div>
      <div
        class="c3 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col2
        </div>
      </div>
      <div
        class="c3 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col3
        </div>
      </div>
    </div>
  </div>
  <div
    class="c0 c1"
  >
    <div
      class="c8 xl-row-root xl-row-root-flex xl-row-root-justify-center"
      style="margin-left: -5px; margin-right: -5px;"
    >
      <div
        class="c3 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col1
        </div>
      </div>
      <div
        class="c3 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col2
        </div>
      </div>
      <div
        class="c3 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col3
        </div>
      </div>
    </div>
  </div>
  <div
    class="c0 c1"
  >
    <div
      class="c9 xl-row-root xl-row-root-flex xl-row-root-justify-end"
      style="margin-left: -5px; margin-right: -5px;"
    >
      <div
        class="c3 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col1
        </div>
      </div>
      <div
        class="c3 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col2
        </div>
      </div>
      <div
        class="c3 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col3
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./packages/react/src/Row/__doc__/Offset.tsx correctly 1`] = `
.c2 {
  position: relative;
  box-sizing: border-box;
  zoom: 1;
}

.c2:before,
.c2:after {
  display: table;
  box-sizing: border-box;
  content: " ";
}

.c2:after {
  clear: both;
}

.c3 {
  float: left;
  box-sizing: border-box;
  position: relative;
  min-height: 1px;
  width: 25%;
}

.c5 {
  float: left;
  box-sizing: border-box;
  position: relative;
  min-height: 1px;
  width: 25%;
  margin-left: 25%;
}

.c6 {
  float: left;
  box-sizing: border-box;
  position: relative;
  min-height: 1px;
  width: 25%;
  left: 25%;
}

.c7 {
  float: left;
  box-sizing: border-box;
  position: relative;
  min-height: 1px;
  width: 25%;
  right: 25%;
}

.c8 {
  float: left;
  box-sizing: border-box;
  position: relative;
  min-height: 1px;
  width: 25%;
  right: 50%;
}

.c1 {
  padding: 0.5rem;
  background-color: rgba(0,0,0,0.12);
  border-radius: 4px;
}

.c0 + .c0 {
  margin-top: 1rem;
}

.c4 {
  padding: 0.5rem;
  color: #fff;
  text-align: center;
  background-color: #3f51b5;
  border-radius: 5px;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2 xl-row-root"
      style="margin-left: -5px; margin-right: -5px;"
    >
      <div
        class="c3 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col1
        </div>
      </div>
      <div
        class="c5 xl-col-root xl-col-root-column-6 xl-col-root-offset-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col2
        </div>
      </div>
      <div
        class="c3 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col3
        </div>
      </div>
    </div>
  </div>
  <div
    class="c0 c1"
  >
    <div
      class="c2 xl-row-root"
      style="margin-left: -5px; margin-right: -5px;"
    >
      <div
        class="c3 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col1
        </div>
      </div>
      <div
        class="c6 xl-col-root xl-col-root-column-6 xl-col-root-push-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col2
        </div>
      </div>
      <div
        class="c7 xl-col-root xl-col-root-column-6 xl-col-root-pull-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col3
        </div>
      </div>
      <div
        class="c3 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col4
        </div>
      </div>
    </div>
  </div>
  <div
    class="c0 c1"
  >
    <div
      class="c2 xl-row-root"
      style="margin-left: -5px; margin-right: -5px;"
    >
      <div
        class="c5 xl-col-root xl-col-root-column-6 xl-col-root-offset-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col1
        </div>
      </div>
      <div
        class="c8 xl-col-root xl-col-root-column-6 xl-col-root-pull-12"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col2
        </div>
      </div>
      <div
        class="c3 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col3
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./packages/react/src/Row/__doc__/ResponsiveColumn.tsx correctly 1`] = `
.c0 {
  position: relative;
  box-sizing: border-box;
  zoom: 1;
}

.c0:before,
.c0:after {
  display: table;
  box-sizing: border-box;
  content: " ";
}

.c0:after {
  clear: both;
}

.c1 {
  float: left;
  box-sizing: border-box;
  display: block;
  position: relative;
}

.c2 {
  padding: 0.5rem;
  color: #fff;
  text-align: center;
  background-color: #3f51b5;
  border-radius: 5px;
}

<div>
  <div
    class="c0 xl-row-root"
  >
    <div
      class="c1 xl-col-root"
    >
      <div
        class="c2"
      >
        col1
      </div>
    </div>
    <div
      class="c1 xl-col-root"
    >
      <div
        class="c2"
      >
        col2
      </div>
    </div>
    <div
      class="c1 xl-col-root"
    >
      <div
        class="c2"
      >
        col3
      </div>
    </div>
    <div
      class="c1 xl-col-root"
    >
      <div
        class="c2"
      >
        col4
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./packages/react/src/Row/__doc__/ResponsiveOffset.tsx correctly 1`] = `
.c2 {
  position: relative;
  box-sizing: border-box;
  zoom: 1;
}

.c2:before,
.c2:after {
  display: table;
  box-sizing: border-box;
  content: " ";
}

.c2:after {
  clear: both;
}

.c3 {
  float: left;
  box-sizing: border-box;
  position: relative;
  min-height: 1px;
  width: 25%;
}

.c5 {
  float: left;
  box-sizing: border-box;
  position: relative;
  min-height: 1px;
  width: 25%;
  margin-left: 25%;
}

.c1 {
  padding: 0.5rem;
  background-color: rgba(0,0,0,0.12);
  border-radius: 4px;
}

.c0 + .c0 {
  margin-top: 1rem;
}

.c4 {
  padding: 0.5rem;
  color: #fff;
  text-align: center;
  background-color: #3f51b5;
  border-radius: 5px;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2 xl-row-root"
      style="margin-left: -5px; margin-right: -5px;"
    >
      <div
        class="c3 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col1
        </div>
      </div>
      <div
        class="c3 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col2
        </div>
      </div>
      <div
        class="c3 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col3
        </div>
      </div>
    </div>
  </div>
  <div
    class="c0 c1"
  >
    <div
      class="c2 xl-row-root"
      style="margin-left: -5px; margin-right: -5px;"
    >
      <div
        class="c3 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col1
        </div>
      </div>
      <div
        class="c3 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col2
        </div>
      </div>
      <div
        class="c3 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col3
        </div>
      </div>
    </div>
  </div>
  <div
    class="c0 c1"
  >
    <div
      class="c2 xl-row-root"
      style="margin-left: -5px; margin-right: -5px;"
    >
      <div
        class="c3 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col1
        </div>
      </div>
      <div
        class="c3 xl-col-root xl-col-root-column-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col2
        </div>
      </div>
      <div
        class="c5 xl-col-root xl-col-root-column-6 xl-col-root-offset-6"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="c4"
        >
          col3
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./packages/react/src/Transition/__doc__/Appear.tsx correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 200px;
  color: #fff;
  font-size: 3rem;
  background-color: #007bff;
  overflow: hidden;
  margin-top: 16px;
}

<div>
  <button>
    Click
  </button>
  <p>
    进场动画
  </p>
  <div
    class="c0"
    style="height: 0px;"
  >
    DEMO
  </div>
  <p>
    出场动画
  </p>
  <div
    class="c0"
  >
    DEMO
  </div>
</div>
`;

exports[`renders ./packages/react/src/Transition/__doc__/Basic.tsx correctly 1`] = `
<div>
  <button>
    Click
  </button>
</div>
`;

exports[`renders ./packages/react/src/TransitionGroup/__doc__/Basic.tsx correctly 1`] = `
.c0 {
  display: inline-block;
  margin-right: 10px;
}

.c0.slide-enter-active,
.c0.slide-leave-active {
  -webkit-transition: all 1s ease-in-out;
  transition: all 1s ease-in-out;
}

.c0.slide-leave-to,
.c0.slide-enter {
  opacity: 0;
}

.c0.slide-leave,
.c0.slide-enter-to {
  opacity: 1;
  -webkit-transform: translateY(0px);
  -ms-transform: translateY(0px);
  transform: translateY(0px);
}

.c0.slide-enter {
  -webkit-transform: translateY(-30px);
  -ms-transform: translateY(-30px);
  transform: translateY(-30px);
}

.c0.slide-leave-to {
  -webkit-transform: translateY(30px);
  -ms-transform: translateY(30px);
  transform: translateY(30px);
}

<div>
  <div>
    <button>
      add
    </button>
    <button>
      remove
    </button>
  </div>
  <div
    class=""
  >
    <span
      class="c0"
    >
      0
    </span>
    <span
      class="c0"
    >
      1
    </span>
    <span
      class="c0"
    >
      2
    </span>
    <span
      class="c0"
    >
      3
    </span>
    <span
      class="c0"
    >
      4
    </span>
    <span
      class="c0"
    >
      5
    </span>
    <span
      class="c0"
    >
      6
    </span>
    <span
      class="c0"
    >
      7
    </span>
    <span
      class="c0"
    >
      8
    </span>
    <span
      class="c0"
    >
      9
    </span>
  </div>
</div>
`;
